Update and rename Untitled-1.html to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<nav id="menu">
 			<ul>
-			  <li class="active"><a href="Untitled-1.html">HOME</a></li>
+			  <li class="active"><a href="index.html">HOME</a></li>
 			  <li><a href="formulario/index.html">CONTACTO</a></li>
 			  <li><a href="diseno/index.html">PRODUCTOS</a></li>
 			  <li><a href="animacion/index.html">ENVÍOS</a></li>
